--- a/question.html
+++ b/question.html
@@ -11,8 +11,17 @@
 <input type="radio" name="male"/> Delhi <br>
 <input type="radio" name="male"/> Kolkata <br>
 <input type="radio" name="male"/> Chennai <br>
-<button onclick="submit()">submit</button>
-
+<p>Q:2 What is the capital of Karnataka?</p>
+<input type="radio" name="male"/> Mumbai <br>
+<input type="radio" name="male"/> Delhi <br>
+<input type="radio" name="male"/> Bangalore <br>
+<input type="radio" name="male"/> Chennai <br>
+<p>Q:3 what is the full form of HTML?</p>
+<input type="radio" name="male"/> Hyper Text Markup Language <br>
+<input type="radio" name="male"/> Hyper Test Markup Language <br>
+<input type="radio" name="male"/> Hyper Text Makeup Language <br>
+<input type="radio" name="male"/> None Of these <br><br>
+<button onclick="submit()">submit</button><br>
 
 <script>
   var timeleft = 90;
