--- a/start_page.html
+++ b/start_page.html
@@ -1,4 +1,4 @@
-<Html>
+<html>
     <head> 
         <style type-"text/css"> h1 {color:red;text-align:center;}</style>
        
@@ -51,4 +51,4 @@
     <input type="text" name="country code"  value="+91" size="10"/> 
     <input type="text" name="phone" size="10"/> <br> <br>
     <input type="email" name="Email" size="15"/> <br> <br>
-    <A href="question.html"><button type="button" >Start</button><A>
+    <a href="question.html"><button type="button" >Start</button><a>
