--- a/question.html
+++ b/question.html
@@ -1,4 +1,4 @@
-<Html>
+<html>
     <head> 
     <title>
     Quiz
@@ -6,21 +6,38 @@
     </head>
 <body>
 <div id="countdown" > </div>
+<p>Multiple Choice Questions:</p><br>
 <p>Q:1 What is the capital of India?</p>
-<input type="radio" name="male"/> Mumbai <br>
-<input type="radio" name="male"/> Delhi <br>
-<input type="radio" name="male"/> Kolkata <br>
-<input type="radio" name="male"/> Chennai <br>
+<input type="radio" name="1"/> Mumbai <br>
+<input type="radio" name="1"/> Delhi <br>
+<input type="radio" name="1"/> Kolkata <br>
+<input type="radio" name="1"/> Chennai <br>
 <p>Q:2 What is the capital of Karnataka?</p>
-<input type="radio" name="male"/> Mumbai <br>
-<input type="radio" name="male"/> Delhi <br>
-<input type="radio" name="male"/> Bangalore <br>
-<input type="radio" name="male"/> Chennai <br>
+<input type="radio" name="2"/> Mumbai <br>
+<input type="radio" name="2"/> Delhi <br>
+<input type="radio" name="2"/> Bangalore <br>
+<input type="radio" name="2"/> Chennai <br>
 <p>Q:3 what is the full form of HTML?</p>
-<input type="radio" name="male"/> Hyper Text Markup Language <br>
-<input type="radio" name="male"/> Hyper Test Markup Language <br>
-<input type="radio" name="male"/> Hyper Text Makeup Language <br>
-<input type="radio" name="male"/> None Of these <br><br>
+<input type="radio" name="3"/> Hyper Text Markup Language <br>
+<input type="radio" name="3"/> Hyper Test Markup Language <br>
+<input type="radio" name="3"/> Hyper Text Makeup Language <br>
+<input type="radio" name="3"/> None Of these <br>
+<p>Q:4 What is the 16-bit compiler allowable range for integer constants?</p>
+<input type="radio" name="4"/> -3.4e38 to 3.4e38<br>
+<input type="radio" name="4"/> -32767 to 32768 <br>
+<input type="radio" name="4"/> -32668 to 32667 <br>
+<input type="radio" name="4"/> -32768 to 32767 <br>
+<p>Q:5 What is required in each C program?</p>
+<input type="radio" name="5"/> The program must have at least one function.<br>
+<input type="radio" name="5"/> The program does not require any function. <br>
+<input type="radio" name="5"/> Input data <br>
+<input type="radio" name="5"/> Output data <br>
+<p>multi options questions:</p><br>
+<p>Q:6 Which are the datatypes in C?</p>
+<input type="checkbox" name="6"/> int<br>
+<input type="checkbox" name="6"/> pointer <br>
+<input type="checkbox" name="6"/> float <br>
+<input type="checkbox" name="6"/> array <br><br>
 <button onclick="submit()">submit</button><br>
 
 <script>
@@ -37,9 +54,6 @@
 	alert("Answers Submitted!!!")
   
 }
-
-
-</script>
 
 
 </script>
