--- a/start_page.html
+++ b/start_page.html
@@ -10,21 +10,21 @@
     <h1> Fill the details to attempt the exam </h1>
     <br>
     <br>
-    <form>
+    <form target="_blank" action="question.html">
     
     <label> Firstname: </label>       
-    <input type="text" name="firstname" size="15" required/> <br> <br>
+    <input type="text" name="firstname" required size="15"/> <br> <br>
     <label> Middlename: </label>   
     <input type="text" name="middlename" size="15"/> <br> <br>
     <label> Lastname: </label>       
-    <input type="text" name="lastname" size="15"/> <br> <br>
+    <input type="text" name="lastname" size="15" required/> <br> <br>
      <label> Email: </label>
-    <input type="email" name="Email" size="15"/> <br> <br>
+    <input type="email" name="Email" size="20" required/> <br> <br>
    
     <label> 
     Course :
     </label> 
-    <select>
+    <select required>
     <option value="Course" >Course</option>
     <option value="BCA">BCA</option>
     <option value="BBA">BBA</option>
@@ -40,7 +40,7 @@
     Gender :
     </label><br>
     <input type="radio" name="male"/> Male <br>
-    <input type="radio" name="female"/> Female <br>
+    <input type="radio" name="female" /> Female <br>
     <input type="radio" name="other"/> Other
     <br>
     <br>
@@ -48,7 +48,10 @@
     <label> 
     Phone :
     </label>
-    <input type="text" name="country code"  value="+91" size="10"/> 
+    <input type="text" name="country code"  value="+91" size="1"/> 
     <input type="text" name="phone" size="10"/> <br> <br>
-    <input type="email" name="Email" size="15"/> <br> <br>
-    <a href="question.html"><button type="button" >Start</button><a>
+    <input type="submit" >
+
+        </form>
+        </body>
+        </html>
